# contracts

./: .gitignore  Anchor.toml  Cargo.toml  README.md  pnpm-lock.yaml
common/: Cargo.toml
common/src/: lib.rs
programs/id_gateway/: Cargo.toml
programs/id_gateway/src/: lib.rs
programs/id_registry/: Cargo.toml
programs/id_registry/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/id_registry/src/processor/: change_recovery.rs  freeze_gateway.rs  initialize_gateway.rs  key_counter.rs  mod.rs  recover.rs  register.rs  set_gateway.rs  transfer.rs  transfer_with_recovery.rs
programs/signed_key_request_validator/: Cargo.toml
programs/signed_key_request_validator/src/: error.rs  lib.rs
programs/signer_gateway/: Cargo.toml
programs/signer_gateway/src/: lib.rs
programs/signer_registry/: Cargo.toml
programs/signer_registry/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/signer_registry/src/processor/: add.rs  add_validator.rs  add_via_admin.rs  freeze_gateway.rs  initialize_gateway.rs  mod.rs  set_gateway.rs  set_validator.rs
programs/storage_registry/: Cargo.toml
programs/storage_registry/src/: error.rs  lib.rs
tests/: common.ts  id_gateway_program.ts  id_registry_program.ts  registry_program.ts  signer_gateway.ts  signer_registry.ts  wid.ts
