[package]
name = "signer_gateway"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "signer_gateway"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
signer_registry = { path = "../signer_registry", features = ["cpi"] }
id_registry = { path = "../id_registry", features = ["cpi"] }
